Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="card1">
         <h1>Would you please accept my gift</h1>
 
-        <img src="images/catheart.png" style="width: 300px;">
+        <img src="catheart.png" style="width: 300px;">
 
         <h2>
             I thought this would be a cute way to show you my appreciate for you.
@@ -168,7 +168,7 @@
 <script>
     // Background Music Control
     const music = document.getElementById("bg-music");
-    const PAGE_MUSIC = "music/TaylotCardigan.mp3";
+    const PAGE_MUSIC = "TaylotCardigan.mp3";
 
     const savedTime = localStorage.getItem("musicTime");
     const isPlaying = localStorage.getItem("musicPlaying") !== "false";
@@ -369,3 +369,4 @@ function animate() {
 
 </body>
 </html>
+
