Fix HTML encoding issues in yes.html

--- a/yes.html
+++ b/yes.html
@@ -112,15 +112,15 @@
 
     <div class="image-buttons">
       <div class="image-card" onclick="goToPage1()">
-        <img src="./images/catandheart.png" alt="Present 1">
+        <img src="catandheart.png" alt="Present 1">
       </div>
 
       <div class="image-card" onclick="goToPage2()">
-        <img src="./images/catswings.png" alt="Present 2">
+        <img src="catswings.png" alt="Present 2">
       </div>
 
       <div class="image-card" onclick="goToPage3()">
-        <img src="./images/catbats.png" alt="Present 3">
+        <img src="catbats.png" alt="Present 3">
       </div>
     </div>
   </div>
@@ -131,7 +131,7 @@
   <script>
 // Background Music Control
     const music = document.getElementById("bg-music");
-    const PAGE_MUSIC = "music/TaylotCardigan.mp3";
+    const PAGE_MUSIC = "TaylotCardigan.mp3";
 
     const savedTime = localStorage.getItem("musicTime");
     const isPlaying = localStorage.getItem("musicPlaying") !== "false";
@@ -263,3 +263,4 @@
   </script>
 </body>
 </html>
+
