Fix HTML encoding issues in page1.html

--- a/page1.html
+++ b/page1.html
@@ -131,7 +131,7 @@
     <!-- LEFT SIDE -->
     <div class="left-panel">
         
-        <img src="images/NouraDate.png" alt="Her Image">
+        <img src="NouraDate.png" alt="Her Image">
 
         <div class="bio-box">
             <h1>Noura Abuelrous 💕</h1>
@@ -287,3 +287,4 @@ from the little details to the way the night unfolded.
 
 </body>
 </html>
+
