Fix HTML encoding issues in page1.html

--- a/page1.html
+++ b/page1.html
@@ -121,7 +121,7 @@
 
 <body>
   <audio id="bg-music" loop>
-    <source src="music/TaylotCardigan.mp3" type="audio/mpeg">
+    <source src="TaylotCardigan.mp3" type="audio/mpeg">
   </audio>
 
 
@@ -287,4 +287,5 @@ from the little details to the way the night unfolded.
 
 </body>
 </html>
+
 
