Fix HTML encoding issues in page2.html

--- a/page2.html
+++ b/page2.html
@@ -120,14 +120,14 @@
 
 <body>
     <audio id="bg-music" loop>
-    <source src="music/TaylotCardigan.mp3" type="audio/mpeg">
+    <source src="TaylotCardigan.mp3" type="audio/mpeg">
     </audio>
 
   <div class="page-card">
 
     <!-- IMAGE SIDE -->
     <div class="image-side">
-      <img src="images/NouraDuo.png" alt="Us Together">
+      <img src="NouraDuo.png" alt="Us Together">
     </div>
 
     <!-- LETTER SIDE -->
@@ -211,3 +211,4 @@
 
 </body>
 </html>
+
