--- a/page3.html
+++ b/page3.html
@@ -131,7 +131,7 @@
 <body>
   <!-- Music (continues across pages using localStorage) -->
   <audio id="bg-music" loop>
-    <source src="music/TaylotCardigan.mp3" type="audio/mpeg">
+    <source src="TaylotCardigan.mp3" type="audio/mpeg">
   </audio>
 
   <canvas id="scene"></canvas>
@@ -350,7 +350,7 @@
 
     /* ---------------- PLAYER (snake trail + image cursor) ---------------- */
     const coupleImg = new Image();
-    coupleImg.src = "images/catbats.png"; // <-- CHANGE if needed
+    coupleImg.src = "catbats.png"; // <-- CHANGE if needed
 
     const player = {
       x: 0,
@@ -533,3 +533,4 @@
   </script>
 </body>
 </html>
+
